fix z-index issue with code blocks

--- a/docs/assets/extra.css
+++ b/docs/assets/extra.css
@@ -1,3 +1,7 @@
 .mermaid {
     text-align: center;
  }
+
+.highlight pre {
+    z-index: -1;
+}
